Tue Dec 17  4:15:36 2008  Brent Roman  <brent@mbari.org>

        * eval.c:  streamlined rb_thread_restore_context() to ensure O(1) time

Tue Dec 15  9:15:36 2008  Brent Roman  <brent@mbari.org>

        * eval.c:  factored rb_eval() into many separate non-inlined
                  functions to reduce the size of its stack frame when
                  compiled with gcc.
                  Factored callcc into 2 functions.


Tue Dec 13  6:10:36 2008  Brent Roman  <brent@mbari.org>

        * eval.c:  update stack extent just before and after every setjmp

        * gc.c:  replaced rb_gc_stress with gc_getlimit and setlimit
                 update stack extent after every xmalloc and xrealloc
                 export rb_gc_stack_grow_direction if not known at compile time
                 removed dynamic adjustment of malloc_limit
                 removed workaround for obsolete gcc 2.7.2.3 bug                 

        * signal.h: don't try to clear stress after segsegv.  It's a too late.
        
        * rubysig.h:  CHECK_INTS clears ghost references off stack


Tue Dec 12  6:11:36 2008  Brent Roman  <brent@mbari.org>

        * eval.c:  exclude other thread's stack frames from current one

        * gc.c:  STACK_LENGTH macro takes start parameter

        * node.h: added stk_start pointer to ruby thread struct

        * intern.h:  stack_length takes base pointer as parameter
        

Tue Dec  9  8:11:36 2008  Brent Roman  <brent@mbari.org>

     * eval.c:  added Continuation.thread method
        * cc_mark frees the continuation's stack if its thread is dead
          avoids recursive gc that segfaults [see Dec 5th, 2007 ruby-core]

        * added cast in PUSH_FRAME() to eliminate gcc 4.2 compiler warnings    
                   
        * THREAD_DATA() replaces rb_thread_check() in most contexts
        
        * rb_thread_check now complains when passed a Continuation
          (no longer need redundant check in thgroup_add()
        