@@ -1,6 +1,13 @@
+Tue Dec 19 20:15:36 2008  Brent Roman  <brent@mbari.org>
+
+        * eval.c:  added (Method|Proc)#(__line__|__file__) methods
+                   call ruby_set_current_source() before adding method nodes
+
+
 Tue Dec 17  4:15:36 2008  Brent Roman  <brent@mbari.org>
 
         * eval.c:  streamlined rb_thread_restore_context() to ensure O(1) time
+
 
 Tue Dec 15  9:15:36 2008  Brent Roman  <brent@mbari.org>
 
